--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Javascript Practice</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
     
 </body>
 </html>
